# experiment

./: .gitignore  README.md
coding-challenge-02/tetris-rust/: Cargo.toml  FEATURES.md  QUICKSTART.md  README.md  SUBMISSION.md  build.sh
coding-challenge-02/tetris-rust/src/: board.rs  game.rs  main.rs  particles.rs  pieces.rs  storage.rs
coding-challenge-04/rust-maze-solver/: Cargo.toml  FEATURES.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  demo.sh
coding-challenge-04/rust-maze-solver/benches/: maze_benchmark.rs
coding-challenge-04/rust-maze-solver/examples/: EXAMPLES.md
coding-challenge-04/rust-maze-solver/src/: lib.rs  main.rs
coding-challenge-04/rust-maze-solver/tests/: integration_test.rs
coding-challenge-04/rust-snake-game/: Cargo.toml  QUICKSTART.md  README.md
coding-challenge-04/rust-snake-game/src/: game.rs  main.rs  renderer.rs
ebay-mcp/: .gitignore  Cargo.toml  README.md
ebay-mcp/config/: config.toml  search_phrases.toml
ebay-mcp/src/: error.rs  lib.rs  main.rs
ebay-mcp/src/browser/: anti_detection.rs  mod.rs  pool.rs
ebay-mcp/src/config/: mod.rs
ebay-mcp/src/models/: config.rs  listing.rs  mod.rs  search.rs
ebay-mcp/src/scraper/: ebay.rs  mod.rs
ebay-mcp/src/search/: manager.rs  mod.rs
ebay-mcp/src/server/: mod.rs  protocol.rs  resources.rs  server.rs  tools.rs
ebay-mcp/src/storage/: cache.rs  database.rs  mod.rs
ebay-mcp/src/utils/: logging.rs  mod.rs
ebay-mcp/tests/common/: fixtures.rs  helpers.rs  mocks.rs  mod.rs
ebay-mcp/wrk_docs/: 2025.11.13 - HLD - eBay Search MCP Server.md  2025.11.14 - CC - code-coverage-analysis.md  2025.11.14 - CC - coverage-improvement-plan.md
ebay-mcp/wrk_journals/: 2025.11.13 - JRN - eBay MCP Implementation.md  2025.11.14  2025.11.14 - JRN - coverage-improvement-session.md
f1gp-port/: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
f1gp-port/data/fixtures/: README.md
f1gp-port/data/samples/: driver_db.json
f1gp-port/data/tracks_json/: track_01_phoenix.json  track_02_interlagos.json  track_03_imola.json  track_04_monaco.json  track_05_montreal.json  track_06_mexico.json  track_07_magny-cours.json  track_08_silverstone.json  track_09_hockenheim.json  track_10_hungaroring.json  track_11_spa.json  track_12_monza.json  track_13_estoril.json  track_14_barcelona.json  track_15_suzuka.json  track_16_adelaide.json
f1gp-port/docs/: audio_ui_extractor.md  data_pipeline.md  dos_capture_playbook.md  file_inventory.md  parity_harness.md  track_binary_format.md  track_format_spec.md
f1gp-port/docs/re/: README.md
f1gp-port/scripts/: build_fixtures.rs  build_fixtures.sh  generate_fixture_csvs.sh  generate_sprite_fixtures.sh  run_ci.sh
f1gp-port/src/: lib.rs  main.rs
f1gp-port/src/ai/: driver.rs  mod.rs  racing_line.rs
f1gp-port/src/audio/: engine.rs  mod.rs  sound.rs  sound_engine.rs
f1gp-port/src/data/: asset.rs  car.rs  fixtures.rs  loader.rs  mod.rs  objects.rs  parser.rs  track.rs
f1gp-port/src/game/: championship.rs  damage.rs  input.rs  mod.rs  pitstop.rs  qualifying.rs  session.rs  state.rs  weather.rs  weekend.rs
f1gp-port/src/physics/: car.rs  collision.rs  engine.rs  mod.rs
f1gp-port/src/platform/: graphics.rs  mod.rs
f1gp-port/src/render/: camera.rs  car_renderer.rs  (+5 more)
f1gp-port/tests/: track_loading.rs
f1gp-port/tools/: analyze_track.py  export_all_tracks.sh  extract_iso.py
f1gp-port/wrk_docs/: 2025.11.18 - CR - Full Code Review.md  2025.11.18 - PLAN - Code Review.md  2025.11.19 - Gap Analysis.md  2025.11.19 - HLD - F1GP Parity Plan v2.md  2025.11.19 - HLD - F1GP Parity Plan v3.md  2025.11.19 - PLN - F1GP Parity Implementation.md  2025.11.19 - Racing Line Schema.md  2025.11.19 - STATUS - Phase 1 Wrap-Up.md  2025.11.19 - Telemetry Schema Spec.md  2025.11.20 - CR - Full Repository Review.md  2025.11.20 - CR - Plan.md
f1gp-port/wrk_journals/: 2025.11.15 - JRN - 3D Integration.md  2025.11.16 - HLD - Real TRK File Support.md  2025.11.16 - JRN - Custom HUD Implementation.md  2025.11.16 - JRN - Demo Enhancements.md  2025.11.16 - JRN - Enhanced Camera Controls.md  2025.11.16 - JRN - Phase 1 Complete.md  2025.11.16 - JRN - Real Track Support.md  2025.11.16 - JRN - Track Parser Implementation.md  2025.11.16 - JRN - Visual Improvements.md  2025.11.16 - PLAN - 3D Demo Enhancements.md  2025.11.16 - PLAN - Real TRK Implementation.md  2025.11.16 - SESSION SUMMARY.md  2025.11.17 - Isometric 2.5D Rendering Plan.md  2025.11.17 - JRN - Documentation and Next Steps.md  2025.11.17 - JRN - Real TRK Implementation.md  2025.11.17 - JRN - Single Binary Integration.md  2025.11.17 - SESSION SUMMARY - Phase 1 Complete.md  2025.11.17 - STATUS REVIEW - Architecture Gap Analysis.md  2025.11.17 - Sound System Implementation Plan.md  2025.11.18 - JRN - Review Follow-up.md  2025.11.18 - JRN - Weather System Implementation.md  2025.11.18 - Montreal Track Investigation.md  2025.11.18 - Session Continuation Summary.md  2025.11.18 - v1.0 RELEASE.md  2025.11.19 - JRN - Phase 1 Implementation.md
jrnrvw/: Cargo.toml  README.md
jrnrvw/src/: cli.rs  error.rs  lib.rs  main.rs
jrnrvw/tests/: cli_integration.rs  discovery_integration.rs
jrnrvw/wrk_docs/: 2025.11.13 - CC - code coverage analysis.md  2025.11.13 - CC - final coverage report.md  2025.11.13 - FEAT - AI summarization.md  2025.11.13 - PLN - coverage improvement plan.md  2025.11.13 - PLN - jrnrvw multistage implementation.md  2025.11.13 - jrnrvw tool specification.md
jrnrvw/wrk_journals/: 2025.11.13 - JRN - jrnrvw implementation.md
jrnrvw/wrk_jrn/: 2025.11.13 - JRN - jrnrvw spec creation.md
mdperf/benchctl/: Cargo.toml
stock-price-mcp/: .gitignore  Cargo.toml  MCP_IMPLEMENTATION_GUIDE.md  PROJECT_SUMMARY.md  README.md  TESTING.md  claude_desktop_config.json.example  test-server.sh
stock-price-mcp/src/: main.rs
udio-mcp/: .gitignore  Cargo.toml  mcp-server-comprehensive-guide.md
udio-mcp/config/: selectors.toml
udio-mcp/src/: lib.rs  main.rs
udio-mcp/tests/: browser_integration.rs
udio-mcp/wrk_docs/: 2025.01.13 - HLD - Udio Music MCP Server.md  2025.01.13 - PLN - Udio MCP Server Implementation Plan.md
(+587 files in other folders)
