[package]
name = "jrnrvw"
version = "0.1.0"
edition = "2021"
authors = ["jrnrvw contributors"]
description = "A command-line tool for finding and analyzing task journal files"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["journal", "task-tracking", "productivity", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.4", features = ["derive", "cargo"] }
walkdir = "2.4"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pulldown-cmark = "0.9"
anyhow = "1.0"
thiserror = "1.0"
colored = "2.1"
comfy-table = "7.1"
tera = "1.19"
csv = "1.3"
toml = "0.8"
which = "6.0"

[dependencies.atty]
version = "0.2"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
