[package]
name = "stock-price-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thirtyfour = "0.32"
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.20"
