[package]
name = "tetris-rust"
version = "1.0.0"
edition = "2021"
authors = ["Tetris Champion"]
description = "A polished Tetris clone for coding competition"

[dependencies]
macroquad = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
# For testing
