[package]
name = "asset_extractor"
version = "0.1.0"
edition = "2021"
description = "CLI for extracting and verifying F1GP asset files"
authors = ["F1GP Port Team"]
license = "GPL-3.0"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
f1gp-port = { path = "../../" }
indicatif = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
