[package]
name = "audio_ui_extractor"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.5"
hound = "3.5"
image = { version = "0.25", default-features = false, features = ["png"] }
sha2 = "0.10"
