[package]
name = "dos_capture_parser"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
clap = { version = "4.5", features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
csv = "1.3"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
