[package]
name = "extract_iso"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
log.workspace = true
env_logger.workspace = true

# ISO 9660 filesystem support
# cdfs has FUSE dependency issues, trying simpler alternative
# cdfs = "0.2.3"

# CLI
clap = { version = "4.5", features = ["derive"] }

# File operations
walkdir = "2.5"
