[package]
name = "racing_line_cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
clap = { version = "4.5", features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
f1gp-port = { path = "../../" }
