[package]
name = "track_inspector"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "track_inspector"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
f1gp-port = { path = "../.." }
anyhow.workspace = true
log.workspace = true
env_logger.workspace = true
serde_json.workspace = true

# CLI
clap = { version = "4.5", features = ["derive"] }
